// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideBar match snapshot SideBarStateFalse 1`] = `
<div>
  <div
    class="MuiCollapse-root MuiCollapse-horizontal css-gvgdin-MuiCollapse-root"
    style="min-width: 66px;"
  >
    <div
      class="MuiCollapse-wrapper MuiCollapse-horizontal css-13s43c2-MuiCollapse-wrapper"
    >
      <div
        class="MuiCollapse-wrapperInner MuiCollapse-horizontal css-rvg14k-MuiCollapse-wrapperInner"
      >
        <div
          class="css-1b00w0w"
          style="width: inherit;"
        >
          <div
            class="css-fqqimh"
            href="/"
          >
            <div
              class="css-1buwrg5"
            >
              <span
                style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
              >
                <span
                  style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                >
                  <img
                    alt=""
                    aria-hidden="true"
                    src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27104%27%20height=%2729%27/%3e"
                    style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                  />
                </span>
                <img
                  alt="Logo"
                  data-nimg="intrinsic"
                  decoding="async"
                  src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                  style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                />
                <noscript />
              </span>
            </div>
            <div
              class="css-qzjp43"
            >
              <span
                style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
              >
                <span
                  style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                >
                  <img
                    alt=""
                    aria-hidden="true"
                    src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%2731%27%20height=%2729%27/%3e"
                    style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                  />
                </span>
                <img
                  alt="Logo"
                  data-nimg="intrinsic"
                  decoding="async"
                  src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                  style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                />
                <noscript />
              </span>
            </div>
          </div>
          <div
            class="css-vvth4x"
          >
            <div
              class="css-j7qwjs"
            >
              <div
                class="css-hshm0p"
              >
                <div
                  class="css-1u5a3vh"
                >
                  <a
                    class="css-11ylqoy"
                    href="/admin/dashboard"
                  >
                    <ion-icon
                      src="/images/home2.svg"
                      style="width: 18px; height: 18px;"
                    />
                    <span
                      class="css-1skr4lk"
                    >
                      Tableau de bord
                    </span>
                  </a>
                </div>
                <div
                  class="css-dsnyvo"
                />
              </div>
              <div
                class="css-hshm0p"
              >
                <div
                  class="css-lalpws"
                >
                  <ion-icon
                    name="analytics"
                    style="width: 18px; height: 18px;"
                  />
                  <span
                    class="css-1skr4lk"
                  >
                    Analyse
                  </span>
                </div>
                <div
                  class="css-dsnyvo"
                >
                  <div>
                    <div
                      class="css-ik0b0j"
                    >
                      <div
                        class="css-1r522ha"
                      >
                        <div
                          class="css-1oksv39"
                          style="position: relative;"
                        >
                          <div
                            class="css-1ooj8e9"
                          >
                            <a
                              class="css-136al6x"
                              href="/admin/analyze/catalog_structure"
                            >
                              Structure du catalogue
                            </a>
                            <div
                              class="css-ukifpj"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div>
                    <div
                      class="css-ik0b0j"
                    >
                      <div
                        class="css-1r522ha"
                      >
                        <div
                          class="css-1oksv39"
                          style="position: relative;"
                        >
                          <div
                            class="css-1ylhpt2"
                          >
                            <a
                              class="css-136al6x"
                              href="/admin/analyze/search_usage"
                            >
                              Utilisation de la recherche
                            </a>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div>
                    <div
                      class="css-ik0b0j"
                    >
                      <div
                        class="css-1r522ha"
                      >
                        <div
                          class="css-1oksv39"
                          style="position: relative;"
                        >
                          <div
                            class="css-1ylhpt2"
                          >
                            <a
                              class="css-136al6x"
                              href="/admin/analyze/ab_testing"
                            >
                              Tests A/B
                            </a>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-hshm0p"
              >
                <div
                  class="css-lalpws"
                >
                  <ion-icon
                    name="funnel-outline"
                    style="width: 18px; height: 18px;"
                  />
                  <span
                    class="css-1skr4lk"
                  >
                    Merchandising
                  </span>
                </div>
                <div
                  class="css-dsnyvo"
                >
                  <div>
                    <div
                      class="css-ik0b0j"
                    >
                      <div
                        class="css-1r522ha"
                      >
                        <div
                          class="css-1oksv39"
                          style="position: relative;"
                        >
                          <div
                            class="css-1ylhpt2"
                          >
                            <a
                              class="css-136al6x"
                              href="/admin/merchandize/categories"
                            >
                              Catégories
                            </a>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div>
                    <div
                      class="css-ik0b0j"
                    >
                      <div
                        class="css-1r522ha"
                      >
                        <div
                          class="css-1oksv39"
                          style="position: relative;"
                        >
                          <div
                            class="css-1ylhpt2"
                          >
                            <a
                              class="css-136al6x"
                              href="/admin/merchandize/search_results"
                            >
                              Résultats de recherche
                            </a>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div>
                    <div
                      class="css-ik0b0j"
                    >
                      <div
                        class="css-1r522ha"
                      >
                        <div
                          class="css-1oksv39"
                          style="position: relative;"
                        >
                          <button
                            class="css-ugmaxv"
                            style="transition: all 500ms; position: relative;"
                          >
                            Recommendations
                            <ion-icon
                              name="chevron-down"
                              style="transition: all 500ms;"
                            />
                          </button>
                        </div>
                        <div
                          class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-1o2vj7t-MuiCollapse-root"
                          style="min-height: 0px;"
                        >
                          <div
                            class="MuiCollapse-wrapper MuiCollapse-vertical css-1642zpf-MuiCollapse-wrapper"
                          >
                            <div
                              class="MuiCollapse-wrapperInner MuiCollapse-vertical css-xxknsj-MuiCollapse-wrapperInner"
                            >
                              <div
                                class="css-ik0b0j"
                              >
                                <div
                                  class="css-1r522ha"
                                >
                                  <div
                                    class="css-1oksv39"
                                    style="position: relative;"
                                  >
                                    <div
                                      class="css-1ylhpt2"
                                    >
                                      <a
                                        class="css-136al6x"
                                        href="/admin/merchandize/recommender/configuration"
                                      >
                                        Configuration générale
                                      </a>
                                    </div>
                                  </div>
                                </div>
                              </div>
                              <div
                                class="css-ik0b0j"
                              >
                                <div
                                  class="css-1r522ha"
                                >
                                  <div
                                    class="css-1oksv39"
                                    style="position: relative;"
                                  >
                                    <div
                                      class="css-1ylhpt2"
                                    >
                                      <a
                                        class="css-136al6x"
                                        href="/admin/merchandize/recommender/manual_recommenders"
                                      >
                                        Recommendations manuelles
                                      </a>
                                    </div>
                                  </div>
                                </div>
                              </div>
                              <div
                                class="css-ik0b0j"
                              >
                                <div
                                  class="css-1r522ha"
                                >
                                  <div
                                    class="css-1oksv39"
                                    style="position: relative;"
                                  >
                                    <div
                                      class="css-1ylhpt2"
                                    >
                                      <a
                                        class="css-136al6x"
                                        href="/admin/merchandize/recommender/auto_recommenders"
                                      >
                                        Recommendations automatiques
                                      </a>
                                    </div>
                                  </div>
                                </div>
                              </div>
                              <div
                                class="css-ik0b0j"
                              >
                                <div
                                  class="css-1r522ha"
                                >
                                  <div
                                    class="css-1oksv39"
                                    style="position: relative;"
                                  >
                                    <div
                                      class="css-1ylhpt2"
                                    >
                                      <a
                                        class="css-136al6x"
                                        href="/admin/merchandize/recommender/behavioral_recommenders"
                                      >
                                        Recommendations comportementales
                                      </a>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div>
                    <div
                      class="css-ik0b0j"
                    >
                      <div
                        class="css-1r522ha"
                      >
                        <div
                          class="css-1oksv39"
                          style="position: relative;"
                        >
                          <div
                            class="css-1ylhpt2"
                          >
                            <a
                              class="css-136al6x"
                              href="/admin/merchandize/recommender_boosts"
                            >
                              Boosts
                            </a>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-hshm0p"
              >
                <div
                  class="css-lalpws"
                >
                  <ion-icon
                    name="search"
                    style="width: 18px; height: 18px;"
                  />
                  <span
                    class="css-1skr4lk"
                  >
                    Recherche
                  </span>
                </div>
                <div
                  class="css-dsnyvo"
                >
                  <div>
                    <div
                      class="css-ik0b0j"
                    >
                      <div
                        class="css-1r522ha"
                      >
                        <div
                          class="css-1oksv39"
                          style="position: relative;"
                        >
                          <button
                            class="css-ugmaxv"
                            style="transition: all 500ms; position: relative;"
                          >
                            Configuration
                            <ion-icon
                              name="chevron-down"
                              style="transition: all 500ms;"
                            />
                          </button>
                        </div>
                        <div
                          class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-1o2vj7t-MuiCollapse-root"
                          style="min-height: 0px;"
                        >
                          <div
                            class="MuiCollapse-wrapper MuiCollapse-vertical css-1642zpf-MuiCollapse-wrapper"
                          >
                            <div
                              class="MuiCollapse-wrapperInner MuiCollapse-vertical css-xxknsj-MuiCollapse-wrapperInner"
                            >
                              <div
                                class="css-ik0b0j"
                              >
                                <div
                                  class="css-1r522ha"
                                >
                                  <div
                                    class="css-1oksv39"
                                    style="position: relative;"
                                  >
                                    <div
                                      class="css-1ylhpt2"
                                    >
                                      <a
                                        class="css-136al6x"
                                        href="/admin/search/configuration/relevance"
                                      >
                                        Pertinence
                                      </a>
                                    </div>
                                  </div>
                                </div>
                              </div>
                              <div
                                class="css-ik0b0j"
                              >
                                <div
                                  class="css-1r522ha"
                                >
                                  <div
                                    class="css-1oksv39"
                                    style="position: relative;"
                                  >
                                    <div
                                      class="css-1ylhpt2"
                                    >
                                      <a
                                        class="css-136al6x"
                                        href="/admin/search/configuration/autocompletion"
                                      >
                                        Autocomplétion
                                      </a>
                                    </div>
                                  </div>
                                </div>
                              </div>
                              <div
                                class="css-ik0b0j"
                              >
                                <div
                                  class="css-1r522ha"
                                >
                                  <div
                                    class="css-1oksv39"
                                    style="position: relative;"
                                  >
                                    <div
                                      class="css-1ylhpt2"
                                    >
                                      <a
                                        class="css-136al6x"
                                        href="/admin/search/configuration/attributes"
                                      >
                                        Attributs
                                      </a>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div>
                    <div
                      class="css-ik0b0j"
                    >
                      <div
                        class="css-1r522ha"
                      >
                        <div
                          class="css-1oksv39"
                          style="position: relative;"
                        >
                          <div
                            class="css-1ylhpt2"
                          >
                            <a
                              class="css-136al6x"
                              href="/admin/search/facets"
                            >
                              Facettes
                            </a>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div>
                    <div
                      class="css-ik0b0j"
                    >
                      <div
                        class="css-1r522ha"
                      >
                        <div
                          class="css-1oksv39"
                          style="position: relative;"
                        >
                          <div
                            class="css-1ylhpt2"
                          >
                            <a
                              class="css-136al6x"
                              href="/admin/search/thesasurus"
                            >
                              Thésaurus
                            </a>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div>
                <div
                  class="css-we84dv"
                >
                  <a
                    class="css-11ylqoy"
                    href="/admin/monitoring"
                  >
                    <ion-icon
                      name="list"
                      style="width: 18px; height: 18px;"
                    />
                    <span
                      class="css-1skr4lk"
                    >
                      Monitoring
                    </span>
                  </a>
                </div>
              </div>
              <div>
                <div
                  class="css-we84dv"
                >
                  <a
                    class="css-11ylqoy"
                    href="/admin/settings"
                  >
                    <ion-icon
                      name="settings-outline"
                      style="width: 18px; height: 18px;"
                    />
                    <span
                      class="css-1skr4lk"
                    >
                      Paramètres
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SideBar match snapshot SideBarStateTrue 1`] = `
<div>
  <div
    class="MuiCollapse-root MuiCollapse-horizontal MuiCollapse-entered css-r09iak-MuiCollapse-root"
    style="min-width: 278px;"
  >
    <div
      class="MuiCollapse-wrapper MuiCollapse-horizontal css-13s43c2-MuiCollapse-wrapper"
    >
      <div
        class="MuiCollapse-wrapperInner MuiCollapse-horizontal css-rvg14k-MuiCollapse-wrapperInner"
      >
        <div
          class="css-1b00w0w"
        >
          <div
            class="css-fqqimh"
            href="/"
          >
            <div
              class="css-1buwrg5"
            >
              <span
                style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
              >
                <span
                  style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                >
                  <img
                    alt=""
                    aria-hidden="true"
                    src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27104%27%20height=%2729%27/%3e"
                    style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                  />
                </span>
                <img
                  alt="Logo"
                  data-nimg="intrinsic"
                  decoding="async"
                  src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                  style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                />
                <noscript />
              </span>
            </div>
            <div
              class="css-qzjp43"
            >
              <span
                style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
              >
                <span
                  style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                >
                  <img
                    alt=""
                    aria-hidden="true"
                    src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%2731%27%20height=%2729%27/%3e"
                    style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                  />
                </span>
                <img
                  alt="Logo"
                  data-nimg="intrinsic"
                  decoding="async"
                  src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                  style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                />
                <noscript />
              </span>
            </div>
          </div>
          <div
            class="css-vvth4x"
          >
            <div
              class="css-j7qwjs"
            >
              <div
                class="css-hshm0p"
              >
                <div
                  class="css-1u5a3vh"
                >
                  <a
                    class="css-bq1l1q"
                    href="/admin/dashboard"
                  >
                    <ion-icon
                      src="/images/home2.svg"
                      style="width: 18px; height: 18px;"
                    />
                    <span
                      class="css-1skr4lk"
                    >
                      Tableau de bord
                    </span>
                  </a>
                </div>
                <div
                  class="css-dsnyvo"
                />
              </div>
              <div
                class="css-hshm0p"
              >
                <div
                  class="css-lalpws"
                >
                  <ion-icon
                    name="analytics"
                    style="width: 18px; height: 18px;"
                  />
                  <span
                    class="css-1skr4lk"
                  >
                    Analyse
                  </span>
                </div>
                <div
                  class="css-dsnyvo"
                >
                  <div>
                    <div
                      class="css-ik0b0j"
                    >
                      <div
                        class="css-1r522ha"
                      >
                        <div
                          class="css-1oksv39"
                          style="position: relative;"
                        >
                          <div
                            class="css-1ooj8e9"
                          >
                            <a
                              class="css-136al6x"
                              href="/admin/analyze/catalog_structure"
                            >
                              Structure du catalogue
                            </a>
                            <div
                              class="css-ukifpj"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div>
                    <div
                      class="css-ik0b0j"
                    >
                      <div
                        class="css-1r522ha"
                      >
                        <div
                          class="css-1oksv39"
                          style="position: relative;"
                        >
                          <div
                            class="css-1ylhpt2"
                          >
                            <a
                              class="css-136al6x"
                              href="/admin/analyze/search_usage"
                            >
                              Utilisation de la recherche
                            </a>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div>
                    <div
                      class="css-ik0b0j"
                    >
                      <div
                        class="css-1r522ha"
                      >
                        <div
                          class="css-1oksv39"
                          style="position: relative;"
                        >
                          <div
                            class="css-1ylhpt2"
                          >
                            <a
                              class="css-136al6x"
                              href="/admin/analyze/ab_testing"
                            >
                              Tests A/B
                            </a>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-hshm0p"
              >
                <div
                  class="css-lalpws"
                >
                  <ion-icon
                    name="funnel-outline"
                    style="width: 18px; height: 18px;"
                  />
                  <span
                    class="css-1skr4lk"
                  >
                    Merchandising
                  </span>
                </div>
                <div
                  class="css-dsnyvo"
                >
                  <div>
                    <div
                      class="css-ik0b0j"
                    >
                      <div
                        class="css-1r522ha"
                      >
                        <div
                          class="css-1oksv39"
                          style="position: relative;"
                        >
                          <div
                            class="css-1ylhpt2"
                          >
                            <a
                              class="css-136al6x"
                              href="/admin/merchandize/categories"
                            >
                              Catégories
                            </a>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div>
                    <div
                      class="css-ik0b0j"
                    >
                      <div
                        class="css-1r522ha"
                      >
                        <div
                          class="css-1oksv39"
                          style="position: relative;"
                        >
                          <div
                            class="css-1ylhpt2"
                          >
                            <a
                              class="css-136al6x"
                              href="/admin/merchandize/search_results"
                            >
                              Résultats de recherche
                            </a>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div>
                    <div
                      class="css-ik0b0j"
                    >
                      <div
                        class="css-1r522ha"
                      >
                        <div
                          class="css-1oksv39"
                          style="position: relative;"
                        >
                          <button
                            class="css-ugmaxv"
                            style="transition: all 500ms; position: relative;"
                          >
                            Recommendations
                            <ion-icon
                              name="chevron-down"
                              style="transition: all 500ms;"
                            />
                          </button>
                        </div>
                        <div
                          class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-1o2vj7t-MuiCollapse-root"
                          style="min-height: 0px;"
                        >
                          <div
                            class="MuiCollapse-wrapper MuiCollapse-vertical css-1642zpf-MuiCollapse-wrapper"
                          >
                            <div
                              class="MuiCollapse-wrapperInner MuiCollapse-vertical css-xxknsj-MuiCollapse-wrapperInner"
                            >
                              <div
                                class="css-ik0b0j"
                              >
                                <div
                                  class="css-1r522ha"
                                >
                                  <div
                                    class="css-1oksv39"
                                    style="position: relative;"
                                  >
                                    <div
                                      class="css-1ylhpt2"
                                    >
                                      <a
                                        class="css-136al6x"
                                        href="/admin/merchandize/recommender/configuration"
                                      >
                                        Configuration générale
                                      </a>
                                    </div>
                                  </div>
                                </div>
                              </div>
                              <div
                                class="css-ik0b0j"
                              >
                                <div
                                  class="css-1r522ha"
                                >
                                  <div
                                    class="css-1oksv39"
                                    style="position: relative;"
                                  >
                                    <div
                                      class="css-1ylhpt2"
                                    >
                                      <a
                                        class="css-136al6x"
                                        href="/admin/merchandize/recommender/manual_recommenders"
                                      >
                                        Recommendations manuelles
                                      </a>
                                    </div>
                                  </div>
                                </div>
                              </div>
                              <div
                                class="css-ik0b0j"
                              >
                                <div
                                  class="css-1r522ha"
                                >
                                  <div
                                    class="css-1oksv39"
                                    style="position: relative;"
                                  >
                                    <div
                                      class="css-1ylhpt2"
                                    >
                                      <a
                                        class="css-136al6x"
                                        href="/admin/merchandize/recommender/auto_recommenders"
                                      >
                                        Recommendations automatiques
                                      </a>
                                    </div>
                                  </div>
                                </div>
                              </div>
                              <div
                                class="css-ik0b0j"
                              >
                                <div
                                  class="css-1r522ha"
                                >
                                  <div
                                    class="css-1oksv39"
                                    style="position: relative;"
                                  >
                                    <div
                                      class="css-1ylhpt2"
                                    >
                                      <a
                                        class="css-136al6x"
                                        href="/admin/merchandize/recommender/behavioral_recommenders"
                                      >
                                        Recommendations comportementales
                                      </a>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div>
                    <div
                      class="css-ik0b0j"
                    >
                      <div
                        class="css-1r522ha"
                      >
                        <div
                          class="css-1oksv39"
                          style="position: relative;"
                        >
                          <div
                            class="css-1ylhpt2"
                          >
                            <a
                              class="css-136al6x"
                              href="/admin/merchandize/recommender_boosts"
                            >
                              Boosts
                            </a>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-hshm0p"
              >
                <div
                  class="css-lalpws"
                >
                  <ion-icon
                    name="search"
                    style="width: 18px; height: 18px;"
                  />
                  <span
                    class="css-1skr4lk"
                  >
                    Recherche
                  </span>
                </div>
                <div
                  class="css-dsnyvo"
                >
                  <div>
                    <div
                      class="css-ik0b0j"
                    >
                      <div
                        class="css-1r522ha"
                      >
                        <div
                          class="css-1oksv39"
                          style="position: relative;"
                        >
                          <button
                            class="css-ugmaxv"
                            style="transition: all 500ms; position: relative;"
                          >
                            Configuration
                            <ion-icon
                              name="chevron-down"
                              style="transition: all 500ms;"
                            />
                          </button>
                        </div>
                        <div
                          class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-1o2vj7t-MuiCollapse-root"
                          style="min-height: 0px;"
                        >
                          <div
                            class="MuiCollapse-wrapper MuiCollapse-vertical css-1642zpf-MuiCollapse-wrapper"
                          >
                            <div
                              class="MuiCollapse-wrapperInner MuiCollapse-vertical css-xxknsj-MuiCollapse-wrapperInner"
                            >
                              <div
                                class="css-ik0b0j"
                              >
                                <div
                                  class="css-1r522ha"
                                >
                                  <div
                                    class="css-1oksv39"
                                    style="position: relative;"
                                  >
                                    <div
                                      class="css-1ylhpt2"
                                    >
                                      <a
                                        class="css-136al6x"
                                        href="/admin/search/configuration/relevance"
                                      >
                                        Pertinence
                                      </a>
                                    </div>
                                  </div>
                                </div>
                              </div>
                              <div
                                class="css-ik0b0j"
                              >
                                <div
                                  class="css-1r522ha"
                                >
                                  <div
                                    class="css-1oksv39"
                                    style="position: relative;"
                                  >
                                    <div
                                      class="css-1ylhpt2"
                                    >
                                      <a
                                        class="css-136al6x"
                                        href="/admin/search/configuration/autocompletion"
                                      >
                                        Autocomplétion
                                      </a>
                                    </div>
                                  </div>
                                </div>
                              </div>
                              <div
                                class="css-ik0b0j"
                              >
                                <div
                                  class="css-1r522ha"
                                >
                                  <div
                                    class="css-1oksv39"
                                    style="position: relative;"
                                  >
                                    <div
                                      class="css-1ylhpt2"
                                    >
                                      <a
                                        class="css-136al6x"
                                        href="/admin/search/configuration/attributes"
                                      >
                                        Attributs
                                      </a>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div>
                    <div
                      class="css-ik0b0j"
                    >
                      <div
                        class="css-1r522ha"
                      >
                        <div
                          class="css-1oksv39"
                          style="position: relative;"
                        >
                          <div
                            class="css-1ylhpt2"
                          >
                            <a
                              class="css-136al6x"
                              href="/admin/search/facets"
                            >
                              Facettes
                            </a>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div>
                    <div
                      class="css-ik0b0j"
                    >
                      <div
                        class="css-1r522ha"
                      >
                        <div
                          class="css-1oksv39"
                          style="position: relative;"
                        >
                          <div
                            class="css-1ylhpt2"
                          >
                            <a
                              class="css-136al6x"
                              href="/admin/search/thesasurus"
                            >
                              Thésaurus
                            </a>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div>
                <div
                  class="css-we84dv"
                >
                  <a
                    class="css-bq1l1q"
                    href="/admin/monitoring"
                  >
                    <ion-icon
                      name="list"
                      style="width: 18px; height: 18px;"
                    />
                    <span
                      class="css-1skr4lk"
                    >
                      Monitoring
                    </span>
                  </a>
                </div>
              </div>
              <div>
                <div
                  class="css-we84dv"
                >
                  <a
                    class="css-bq1l1q"
                    href="/admin/settings"
                  >
                    <ion-icon
                      name="settings-outline"
                      style="width: 18px; height: 18px;"
                    />
                    <span
                      class="css-1skr4lk"
                    >
                      Paramètres
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
